--- a/form.html
+++ b/form.html
@@ -26,15 +26,14 @@
 <label><input type="radio" name="gender" value="female">Female</label><br><br>
 <fieldset>
 <legend><label>Languages known:</label></legend>
-<label>English</label>
 <input  name="English" type="checkbox">
-<label>Malayalam</label>
+<label>English</label><br><br>
 <input name="Malayalam" type="checkbox">
-<label>Hindi</label>
+<label>Malayalam</label><br><br>
 <input name="Hindi" type="checkbox" >
+<label>Hindi</label><br><br>
 </fieldset><br><br>
 <input type="submit" value="Submit">
 <input type="button" value="Cancel">
 </body>
 </html>
-
