--- a/prgrm using css.html
+++ b/prgrm using css.html
@@ -9,23 +9,15 @@
  that is started on a remote server and delivered 
 over the internet through a <em>browser interface</em>.<br>
 
-<h3 style= "color:purple;font-style:bold;font-style:italic;font-size:25px">WEB APPLICATION COMPONENTS</h3>
-<ol  style= "color:brown;font-size:15px;type:number">
+<h3 style= "color:white;font-style:bold;font-style:italic;font-size:25px">WEB APPLICATION COMPONENTS</h3>
+<ol  style= "color:green;font-size:15px;type:number">
 <li>User interface component</li>
 <li>Structure component</li>
 <li>Client component</li>
 <li>Server component</li>
 </ol><br>
-<h3 style= "color:purple;font-style:bold;font-style:italic;font-size:25px">BENIFITS OF WEB APPLICATION</h3>
-<ul style= "color:brown;font-size:15px;type:number;type:circle">
-<li>Allowing multiple users access to the same version of an application</li>
-<li>Web apps don't need to be installed</li>
-<li>Can be accessed through multiple users</li>
-</ul>
-<br>
 </body>
 </html>
-
 
 
 
